fix activities headers on firefox

--- a/styles/exercise_page.scss
+++ b/styles/exercise_page.scss
@@ -24,6 +24,8 @@
   .text {
     position: absolute;
     top: 0;
+    left: 0;
+    z-index: 100;
     background: rgba(0,0,0,.7);
     width: 100%;
     color: #fff;
